LPD-49265 Apply the agent and remove logic to create modified class files and --patch-module arguments